feat: complete admin cinema CRUD
